# insta-ai

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/adapters/db/: models.py  session.py
app/adapters/db/repositories/: user_repository.py
app/api/: deps.py  dto.py  message.py
app/core/: config.py  logger.py
app/domain/: message_handler.py  models.py
app/ports/: db_port.py  instagram_port.py  llm_port.py
src/: main.py
src/commands/: chat.py  collect.py
src/core/: registry.py
tests/api/: test_message.py
